extends Control


func _on_TestLand_1P_pressed():
	get_tree().change_scene("res://Boards/TestLand/TestLand_1_player.tscn")


func _on_TestLand_2P_pressed():
	get_tree().change_scene("res://Boards/TestLand/TestLand_2_player.tscn")


func _on_TestLand_3P_pressed():
	get_tree().change_scene("res://Boards/TestLand/TestLand_3_player.tscn")


func _on_TestLand_4P_pressed():
	get_tree().change_scene("res://Boards/TestLand/TestLand_4_player.tscn")
